--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -1916,3 +1916,13 @@ Contact: tongt@hkbu.edu.hk},
 	year={2011},
 	publisher={Acm}
 }
+
+
+@article{zhou2018statistical,
+	title={Statistical tests and identifiability conditions for pooling and analyzing multisite datasets},
+	author={Zhou, Hao Henry and Singh, Vikas and Johnson, Sterling C and Wahba, Grace and Alzheimer’s Disease Neuroimaging Initiative and others},
+	journal={Proceedings of the National Academy of Sciences},
+	pages={201719747},
+	year={2018},
+	publisher={National Acad Sciences}
+}
