--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -124,7 +124,7 @@ This general idea has been promoted by \cite{friedman2003multivariate,eric2008te
 Examples in the genetics literature include
 \cite{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008,yu2007two}.
 Other examples include speaker verification \cite{gretton_kernel_2012-1}, 
-text classification \cite{dhillon2003divisive,lopez2016revisiting}, distinguishing between facial expressions \cite{lopez2016revisiting}, data integration \cite{gretton_kernel_2012-1}, record linkage in databases systems \cite{gretton_kernel_2012-1,hall2002permutation,vayatis_auc_2009}, optical character recognition \cite{perez2009estimation}, multimedia \cite{moreno2004kullback}, and functional data analysis \cite{hall2002permutation}.
+text classification \cite{dhillon2003divisive,lopez2016revisiting}, distinguishing between facial expressions \cite{lopez2016revisiting}, data integration \cite{gretton_kernel_2012-1}, record linkage in databases systems \cite{gretton_kernel_2012-1,hall2002permutation,zhou2018statistical}, optical character recognition \cite{perez2009estimation}, multimedia \cite{moreno2004kullback}, and functional data analysis \cite{hall2002permutation}.
 
 Examples in the neuroscientific literature, which is our motivating use-case, include \cite{golland_permutation_2003,pereira_machine_2009,schreiber2013statistical,olivetti2013kernel,varoquaux_assessing_2016}, and especially the recently popularized \emph{multivariate pattern analysis} (MVPA) framework in \cite{kriegeskorte_information-based_2006}.
 
@@ -150,7 +150,7 @@ We emphasize that by high-dimension it is not necessarily implied that the sampl
 In our motivating example it means that the size of the brain's region of interest is large compared to the number of subjects in the experiment. 
 It is thus a \emph{high-dim--small-sample} problem. 
 
-In a seminal contribution, Bai and Saranadasa \cite{bai1996effect} noted that in-high dimension, multivariate tests tend to be low powered unless some regularization is involved. 
+In a seminal contribution, Bai and Saranadasa \cite{bai1996effect} noted that in high-dimension, multivariate tests tend to be low powered unless some regularization is involved. 
 Since then, many high-dimensional tests have been proposed. 
 These can be classified along the following lines:
 \begin{itemize}
@@ -173,7 +173,7 @@ Out recommendations to the practitioner in these high-dim problems:
 
 Various authors have compared accuracy-tests to two-group tests, often with contradicting conclusions.
 In \cite{yu2007two} for instance, authors find that an accuracy-test based on a tree predictor is preferable over a two-group test. 
-Their simulated shift is sparse, so that it is no surprise that a tree-type predictors outperforms linear predictors and tests. 
+Their simulated shift is sparse, so that it is no surprise that a tree-type predictor outperforms linear predictors and tests. 
 Authors of \cite{olivetti2013kernel} compare the kernel test of Gretton et al. \cite{gretton_kernel_2012-1} to an accuracy-test based on logistic-regression.
 Their results are inconclusive with a slight advantage to the logistic regression.
 In \cite{lopez2016revisiting}, authors compare several accuracy-tests to several two-group tests and conclude that an accuracy-test based on a neural-net is preferable. 
@@ -188,7 +188,7 @@ ARE is the limiting ratio of the sample sizes required by two statistics to achi
 The authors of \cite{ramdas_classification_2016} derive the asymptotic power functions of the two test statistics, with which we are able to compute the ARE between Hotelling's $T^2$ (two-group) test and Fisher's LDA (accuracy) test.
 Theorem~14.7 of \cite{vaart_asymptotic_1998} relates asymptotic power functions to ARE.
 Using this theorem and the results of \cite{ramdas_classification_2016} we deduce that the ARE is lower bounded by $2 \pi \approx 6.3$. 
-This means that Fisher's LDA requires at least $6.3$ more samples to achieve the same (asymptotic) power as the $T^2$ test. 
+This means that Fisher's LDA requires at least $6.3$ times more samples to achieve the same (asymptotic) power as the $T^2$ test. 
 In this light, the accuracy-test is remarkably inefficient.  
 For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \cite{lehmann_parametric_2009}, so that an ARE of $6.3$ is strong evidence in favor of the two-group test. 
 
@@ -241,7 +241,7 @@ The sketch of our permutation test is the following: \newline
 (c) Permute labels and recompute the statistic $\mathcal{T}_\pi$. \newline
 (d) Repeat (a)-(c) $R$ times. \newline
 (e) The permutation p-value is the proportion of  $\mathcal{T}_\pi$ larger than the observed $\mathcal{T}$. Formally: 
-$\mathbb{P}\{\mathcal{T}_\pi \geq \mathcal{T}\}:=\frac{1}{R} \sum_{\pi} I\{\mathcal{T}_\pi \geq \mathcal{T}\}$.\newline
+$\mathbb{P}\{\mathcal{T}_\pi \geq \mathcal{T}\}:=\frac{1}{R+1} \sum_{\pi} I\{\mathcal{T}_\pi \geq \mathcal{T}\}$.\newline
 (f) Declare $\mathcal{F}\neq \mathcal{G}$ if the permutation p-value is smaller than $\alpha$, which we set to $\alpha=0.05$.
 \bigskip
 
@@ -258,7 +258,7 @@ For more background see, for example, \cite{anderson_introduction_2003}.
 
 The major difficulty with the $T^2$ statistic is that it requires estimating a covariance matrix, thus introducing $p(p+1)/2=\mathcal{O}(p^2)$ unknown parameters.
 If $n$ is not much larger than $p$, or in low signal-to-noise (SNR), the test is very low powered, as shown in \cite{bai1996effect}. 
-In these cases, high dimensional versions of the $T^2$ should be applied, which essentially regularize the estimator of $\Sigma$, thus reducing the dimensionality of the problem and improving the SNR and power.
+In these cases, high-dimensional versions of the $T^2$ should be applied, which essentially regularize the estimator of $\Sigma$, thus reducing the dimensionality of the problem and improving the SNR and power.
 Examples of high-dim tests for (dense) shifts include 
 \cite{dempster1958high,bai1996effect,schafer_shrinkage_2005,goeman2006testing,srivastava_test_2008,chen_two-sample_2010,lopes2011more,ahmad2014u,thulin2014high,feng2015note}.
 
@@ -268,11 +268,12 @@ Examples of high-dim tests statistics for sparse shifts include \cite{cai_two-sa
 It is possible that the practitioner is unaware of the amount of sparsity in the signal. 
 Some high-dim test statistics that \emph{adapt} to the level of (unknown) sparsity include \cite{simes1986improved,donoho2004higher,zhong2013tests,shen2015adaptive,moscovich2016exact}.
 
-It is possible that the signal is present (not only) in means. 
+It is possible that the signal is present not (only) in means. 
 We would thus opt for a two-group GOF test, instead of a location test. 
 Examples of multivariate GOF tests include \cite{bickel1969distribution,friedman1979multivariate,hall2002permutation,szekely2004testing,Biau2005,Rosenbaum2005,eric2008testing,perez2009estimation,vayatis_auc_2009,gretton_kernel_2012-1}.
 
-As previously mentioned, a classifier's accuracy may also be used as a test statistic. We now explain how this an accuracy-test is constructed. 
+As previously mentioned, a classifier's accuracy may also be used as a test statistic. 
+We now explain how an accuracy-test is constructed. 
 
 
 \subsection{Prediction Accuracy as a Test Statistic}
@@ -343,6 +344,9 @@ We fix the number of folds to $V=4$, and do dot discuss the effect of $V$ becaus
 \bigskip
 
 Table~\ref{tab:collected} collects an initial battery of tests we will be comparing. 
+We selected the accuracy tests based on their popularity in the literature.
+We selected two-group tests based on their popularity, and so that various types of test statistics are represented: tests for dense and sparse shifts, GOF tests, covariance-aware and covariance-agnostic tests. 
+
 \begin{tcolorbox}
 	\centering
 	\footnotesize
@@ -370,7 +374,7 @@ Table~\ref{tab:collected} collects an initial battery of tests we will be compar
 	\captionsetup{type=table}
 	\caption{\footnotesize
 		This table collects the various test statistics we will be studying. 
-		Two-group tests for dense shits include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
+		Two-group tests for dense shifts include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
 		Two-group tests for sparse shifts include \textit{Cai}.
 		Two-group adaptive tests for shifts include \textit{Simes}.
 		The rest are accuracy-tests with details given in the table. 	
@@ -633,7 +637,7 @@ This matter is further discussed in Section~\ref{sec:fix_snr}.
 
 \subsection{Departure from Homoskedasticity and Scalar Invariance}
 
-Our previous simulations assume variables a have unit variance. 
+Our previous simulations assume variables have unit variance. 
 Practitioners are already accustomed to z-score features before learning a regularized predictor (e.g. ridge regression) so this is not an unrealistic setup.
 Implicit z-scoring is sometime an integral part of a test statistic. 
 This is known as \emph{scalar invariance}.
@@ -741,7 +745,7 @@ It can also be seen that power increases with the number of bootstrap replicatio
 
 
 
-\subsection{The Effect of High Dimension}
+\subsection{The Effect of high-dimension}
 \label{sec:highdim}
 
 Our setup of $n=40$ and $p=23$ is high-dim--small-sample, which surfaces finite-sample effects, not manifested in low-dim, $p/n \to 0$ asymptotic analysis.
@@ -751,7 +755,7 @@ We know that this regularization increases power, just by comparing the non-regu
 Can we do the same for classifiers? 
 To answer this question we augment the comparison with some accuracy-tests that have explicit covariance regularization in them. 
 These include shrinkage based LDA \cite{pang_shrinkage-based_2009,ramey_high-dimensional_2016}, where Tikhonov regularization of $\hat \Sigma$ is used; just like the \emph{Schafer} statistic.
-We also try we try a diagonalized LDA~\cite{dudoit_comparison_2002}, also known as \emph{Gaussian Na\"ive Bayes}, which regularizes similarly to the \emph{Srivastava} and \emph{Goeman} statistics.
+We also try a diagonalized LDA~\cite{dudoit_comparison_2002}, also known as \emph{Gaussian Na\"ive Bayes}, which regularizes similarly to the \emph{Srivastava} and \emph{Goeman} statistics.
 
 Simulation results are reported in Figure~\ref{fig:highdim} with naming conventions in Table~\ref{tab:collected_3}.
 The proper regularization of the covariance of a classifier, just like a two-group test, can improve power. 
@@ -779,7 +783,7 @@ In \emph{svm.CV.cCV} this regularization is optimized with CV which leads us to 
 	\end{tabular} 
 	\captionsetup{type=table}
 	\caption{\footnotesize
-		The same as Table~\ref{tab:collected} for regularized (high dimensional) predictors. 
+		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
 	} 
 	\label{tab:collected_3}
 \end{tcolorbox}
@@ -934,7 +938,7 @@ Firstly, because a Monte-Carlo sample of permutations will always be conservativ
 Secondly, because of the presence of ties which does not allow to exhaust the permissible false positive rate, unless randomization is introduced.
 Thirdly, because a highly discrete test-statistic, is insensitive to mild perturbations of the data.
 For an intuition consider the usage of the \emph{resubstitution accuracy} as a test statistic. 
-In a very high dimensional regime, the resubstitution accuracy may be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
+In a very high-dimensional regime, the resubstitution accuracy may be as high as $1$ for the observed data \cite[Theorem 1]{mclachlan_bias_1976}, but also for any permutation.
 The concentration of resubstitution accuracy near $1$, and its discretization, render this test completely useless, with power tending to $0$ for any (fixed) effect size, as the dimension of the model grows. 
 This explains the terrible power of \emph{svm.noCV.c100}, which has barely any regularization\footnote{Recall that the cost parameter in LIBSVM is inversely proportional to the regularization.}. 
 
@@ -1081,7 +1085,7 @@ This is the case, for instance, of the \emph{Gretton} statistic \cite{gretton_ke
 A different argument is that the feature mapping may not be known, but rather learned from the data. 
 We find this to be a weak argument.
 First, two-group tests may also learn feature mappings that maximize power. 
-Secondly, and perhaps more importantly to our setup, in high-dim problem data is barely sufficient to learn covariances in the original space. We thus have little hope of learning covariances in augments spaces. 
+Secondly, and perhaps more importantly to our setup, in high-dim problem data is barely sufficient to learn covariances in the original space. We thus have little hope of learning covariances in augmented spaces. 
 This is perhaps the reason why \cite{harchaoui2009kernel}, who proposed using the covariance of the feature maps in RKHS, demonstrated their solution using a known covariance, and did not try to estimate it from data. 
 
 
@@ -1197,14 +1201,14 @@ Biography text here.
 \end{IEEEbiographynophoto}
 
 
-\begin{IEEEbiographynophoto}{Roy Mukamel}
-	Biography text here.
-\end{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{art/mukamel}}]{Roy Mukamel}
+Roy Mukamel performed his undergraduate studies in computer science and biology and received his Ph.D. from the department of neuroscience at the Weizmann Institute of Science. Following post-doctoral training at the University of California at Los-Angeles (UCLA), he joined Tel-Aviv University. Today he is an associate Professor at the School of Psychological Sciences and Sagol School of Neuroscience at Tel-Aviv University, Israel.
+\end{IEEEbiography}
 
 
-\begin{IEEEbiographynophoto}{Jelle J. Goeman}
-	Biography text here.
-\end{IEEEbiographynophoto}
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{art/Goeman}}]{Jelle J. Goeman}
+is professor of biostatistics at Leiden University Medical Center in The Netherlands.His research focuses on high-dimensional data as they occur in e.g. transcriptomics and neuroimaging. He has worked on methods for penalized estimation and multiple hypothesis testing. He received his PhD from Leiden University and has worked at Imperial College in London and at Radboud University in Nijmegen.
+\end{IEEEbiography}
 
 
 
