--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -118,9 +118,9 @@ signal-detection, multivariate-testing, supervised-learning, hypothesis-testing,
 \section{Introduction}
 \label{sec:introduction}
 
-\IEEEPARstart{M}{any} neuroscientists and geneticists detect signal by fitting a classifier and testing whether it's prediction accuracy is better than chance. 
-The workflow consists of fitting a classifier, estimating its predictive accuracy using cross validation, and test the hypothesis that this accuracy can be attributed to chance alone. 
-This general idea has been promoted by \cite{friedman2003multivariate,eric2008testing,ojala_permutation_2010,lopez2016revisiting}.
+\IEEEPARstart{M}{any} neuroscientists and geneticists detect signal by fitting a classifier and testing whether its prediction accuracy is better than chance. 
+The workflow consists of fitting a classifier, estimating its predictive accuracy using cross validation, and testing the hypothesis that this accuracy can be attributed to chance alone. 
+This general idea has been promoted by Friedman in the statistical literature \cite{friedman2003multivariate}, and separately by Eric, Ojala and Lopez in the machine-learning literature \cite{eric2008testing,ojala_permutation_2010,lopez2016revisiting}.
 Examples in the genetics literature include
 \cite{golub_molecular_1999,slonim_class_2000,radmacher_paradigm_2002,mukherjee_estimating_2003,juan_prediction_2004,jiang_calculating_2008,yu2007two}.
 Other examples include speaker verification \cite{gretton_kernel_2012-1}, 
