--- a/Round3/Manuscript-IEEE/preamble.tex
+++ b/Round3/Manuscript-IEEE/preamble.tex
@@ -87,3 +87,5 @@
 \DeclareMathOperator{\Tr}{Tr}
 \newcommand\given[1][]{\:#1\vert\:}
 
+\newcommand{\citeJR}[1]{\citeauthor{#1} \citep{#1}}
+\newcommand{\citeJRfull}[1]{\citeauthor*{#1} \citep{#1}}
