--- a/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
+++ b/Round3/Manuscript-IEEE/Permuting_Accuracy.bib
@@ -635,16 +635,11 @@ Supplementary Information: A complete compilation of results and R code for simu
   issn = {1053-8119},
   shorttitle = {Machine learning classifiers and {{fMRI}}},
   doi = {10.1016/j.neuroimage.2008.11.007},
-  abstract = {Interpreting brain image experiments requires analysis of complex, multivariate data. In recent years, one analysis approach that has grown in popularity is the use of machine learning algorithms to train classifiers to decode stimuli, mental states, behaviours and other variables of interest from fMRI data and thereby show the data contain information about them. In this tutorial overview we review some of the key choices faced in using this approach as well as how to derive statistically significant results, illustrating each point from a case study. Furthermore, we show how, in addition to answering the question of `is there information about a variable of interest' (pattern discrimination), classifiers can be used to tackle other classes of question, namely `where is the information' (pattern localization) and `how is that information encoded' (pattern characterization).},
-  timestamp = {2016-07-28T05:45:34Z},
-  number = {1, Supplement 1},
-  urldate = {2016-07-28},
   journal = {NeuroImage},
   author = {Pereira, Francisco and Mitchell, Tom and Botvinick, Matthew},
   month = mar,
   year = {2009},
-  pages = {S199--S209},
-  file = {Pereira et al_2009_Machine learning classifiers and fMRI.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/BNQ4Z2SM/Pereira et al_2009_Machine learning classifiers and fMRI.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SIQXCRCC/S1053811908012263.html:text/html}
+  pages = {S199--S209}
 }
 
 @article{simon_pitfalls_2003,
