--- a/Round3/Manuscript-IEEE/preamble.tex
+++ b/Round3/Manuscript-IEEE/preamble.tex
@@ -16,6 +16,7 @@
 \usepackage{fancyhdr}
 \AtBeginDocument{\let\textlabel\label}
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
+\usepackage{wasysym}
 
 \pagestyle{fancy}
 
@@ -89,3 +90,5 @@
 
 \newcommand{\citeJR}[1]{\citeauthor{#1} \citep{#1}}
 \newcommand{\citeJRfull}[1]{\citeauthor*{#1} \citep{#1}}
+
+\newcommand{\cue}{\kreuz}
