--- a/Round3/Manuscript-IEEE/bare_jrnl.tex
+++ b/Round3/Manuscript-IEEE/bare_jrnl.tex
@@ -754,10 +754,11 @@ It can also be seen that power increases with the number of bootstrap replicatio
 \subsection{The Effect of high-dimension}
 \label{sec:highdim}
 
-Our setup of $n=40$ and $p=23$ is high-dim--small-sample, which surfaces finite-sample effects, not manifested in low-dim, $p/n \to 0$ asymptotic analysis.
-Our best performing tests alleviate the dimensionality of the problem by regularizing the estimation of $\Sigma$. 
-Shrinking, or thresholding the entries of $\hat{\Sigma}$ reduces variance at the cost of some (possible) bias. 
-We know that this regularization increases power, just by comparing the non-regularized $T^2$ to its regularized versions. 
+Our best performing tests alleviate the high dimensionality of the problem by regularizing the estimation of $\Sigma$. 
+By comparing the non-regularized $T^2$ to its regularized versions we see that in our high-dim setup, regularization adds power. 
+Regularization is achieved by shrinking, or thresholding, the entries of $\hat{\Sigma}$.
+Shrinking is used in the \emph{Schafer} statistic.
+Thresholding is used in the \emph{Goeman} and \emph{Srivastava} statistics.
 Can we do the same for classifiers? 
 To answer this question we augment the comparison with some accuracy-tests that have explicit covariance regularization in them. 
 These include shrinkage based LDA \cite{pang_shrinkage-based_2009,ramey_high-dimensional_2016}, where Tikhonov regularization of $\hat \Sigma$ is used; just like the \emph{Schafer} statistic.
@@ -769,7 +770,7 @@ See, for instance, \emph{svm.CV.c001} which is clearly the best regularized SVM 
 Replacing the V-fold  with a bootstrap allows us to further increase the power, as done with \emph{lda.highdim.Pang.b50}.
 Even so, the out-of-the-box two-group tests outperform the accuracy-tests.
 
-It is interesting to note that \emph{svm.CV.cCV} is not a good performer. 
+Optimizing the regularization parameter for classification does not result in a good test, as can be seem from the performance of \emph{svm.CV.cCV}.
 In SVMs, the cost parameter governs the magnitude of the margins, and thus the regularization. 
 In \emph{svm.CV.cCV} this regularization is optimized with CV which leads us to argue that the optimal regularization for prediction is not the same as the optimal for testing.
 
